# pomodoro-elementary

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: README.Vala.rst
share/style/: default.css
src/: Pomodoro.vala  PomodoroTimer.vala  PomodoroWindow.vala  TrackerManager.vala
src/Widgets/: TimeDisplay.vala
